# HDLr

./: .gitignore  README.md  flow.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: __init__.py  parser.py
src/hdlparse/: README.md  minilexer.py  verilog_parser.py  vhdl_parser.py
src/hdlr/: __init__.py  __main__.py
src/hdlr/core/: cli.py  design.py  hierarchy_builder.py  scanner.py
src/hdlr/frontend/: __init__.py  factory.py  verilog.py
src/hdlr/frontend/common/: ast_base.py  ir_builder_base.py
src/hdlr/frontend/systemverilog/: ir_builder.py  parser.py
src/hdlr/frontend/verilog/: ast.py  ir_builder.py  parser.py
src/hdlr/ir/: instance.py  model.py  module.py  parameter.py  port.py  signal.py
tests/: test_alu.sv  test_double_module.v  test_instance.sv  test_io_param_signals.sv  test_io_param_signals.v  test_multi_instance.v  test_no_io_no_param.v  test_signal_in_generate.v
tests/golden/: test_golden.py
tests/golden/refs/: io_param_signals.sv  io_param_signals.v
tests/unit/: test_instance.py  test_module.py  test_parameter.py  test_port.py  test_signal.py
