[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdlr"
version = "0.1.0"
description = "HDL hierarchy and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Damien Pretet" }
]

dependencies = [
    "tree-sitter",
    "tree-sitter-verilog",
    "tree-sitter-vhdl",
    "tree-sitter-systemverilog",
]

[project.scripts]
hdlr = "hdlr.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[project.optional-dependencies]
dev = [
    "pytest",
]
